[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hylian-client"
version = "0.1.0"
description = "Python SDK for the Hylian SSO/ACL server — token auth, ACL, CORS, logout for FastAPI"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "frankcl", email = "frank.lichen@gmail.com" }]
keywords = ["hylian", "sso", "acl", "fastapi", "authentication"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.urls]
Homepage = "https://github.com/frankcl/hylian"
Repository = "https://github.com/frankcl/hylian"

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.110",
    "starlette>=0.36",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "fastapi>=0.110",
    "starlette>=0.36",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hylian_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
